--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
     "development": {
-        "host": "mongodb://admin:admin@127.0.0.1:47017/nft_market?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false"
+        "host": "mongodb://colligence:zhfflwjstm@133.186.155.124:27017/talken_nft?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false"
     }
 }
