--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.6.0",
     "express": "~4.16.1",
     "express-validator": "^6.12.0",
+    "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
     "jimp": "^0.16.1",
