--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "nft-backend",
   "version": "0.0.0",
   "private": true,
+  "nodemonConfig": {
+    "ignore": [
+      "logs",
+      "uploads"
+    ]
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "cross-env NODE_ENV=development nodemon --exec node ./bin/www"
