--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --exec node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.2",
     "caver-js-ext-kas": "^1.4.0",
