--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18n": "^0.13.3",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.3",
