--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pug": "2.0.0-beta11",
     "request": "^2.88.2",
     "sharp": "^0.29.1",
+    "sleep": "^6.3.0",
     "uuid": "^8.3.2",
     "web3": "^1.5.2",
     "winston": "^3.3.3",
