--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "bignumber.js": "^9.0.2",
     "bootstrap": "^5.0.2",
     "caver-js-ext-kas": "^1.4.0",
     "cookie-parser": "~1.4.4",
