--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --exec node ./bin/www"
   },
   "dependencies": {
+    "@ethersproject/wallet": "^5.6.1",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.0.2",
