--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "caver-js-ext-kas": "^1.11.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "daovault": "^7.0.32",
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
     "express": "~4.16.1",
@@ -36,6 +37,7 @@
     "mongoose": "^5.13.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "nestyle-steganography": "^1.1.3",
     "node-cron": "^3.0.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2",
